syntax = "proto3";

package auth_v1;

option go_package = "github.com/vitaliysev/mts_go_project/pkg/auth_v1;auth_v1";

service AuthV1 {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Signin (SigninRequest) returns (SigninResponse);
  rpc GetRefreshToken (GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
}

message SigninRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}

message SigninResponse {
  string refresh_token = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string refresh_token = 3;
}

message LoginResponse {
  string access_token = 1;
}

message GetRefreshTokenRequest {
  string refresh_token = 1;
}

message GetRefreshTokenResponse {
  string refresh_token = 1;
}