syntax = "proto3";

package hotel_v1;
import "validate/validate.proto";
option go_package = "github.com/YOUR-USER-OR-ORG-NAME/YOUR-REPO-NAME/api/hotel_v1;hotel_v1";

service HotelV1 {
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);
}

message GetInfoRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
}

message GetInfoResponse {
  HotelInfo hotel = 1;
}

message HotelInfo {
  string name = 1;
  string location = 2;
  int64 price = 3;
}